--- a/index.html
+++ b/index.html
@@ -4,71 +4,44 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Lean-startup-bordeaux : Lean Startup Bordeaux" />
+    <meta name="description" content="Lean Startup Bordeaux" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Lean-startup-bordeaux</title>
+    <title>Lean Startup Bordeaux</title>
   </head>
 
   <body>
 
-    <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/okiwi/lean-startup-bordeaux">View on GitHub</a>
-
-          <h1 id="project_title">Lean-startup-bordeaux</h1>
-          <h2 id="project_tagline">Lean Startup Bordeaux</h2>
-
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/okiwi/lean-startup-bordeaux/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/okiwi/lean-startup-bordeaux/tarball/master">Download this project as a tar.gz file</a>
-            </section>
+          <h1 id="project_title">Lean Startup Bordeaux</h1>
+          <h2 id="project_tagline">Adoptez l'innovation continue</h2>
         </header>
     </div>
 
-    <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h3>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
-
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+        <h3>Accueil</h3>
+        <p>Les 3 et 4 décembre aura lieu la <a href="http://www.leanstartupconf.com/venue">Lean Startup Conference</a> à San Francisco !</p>
+        <p>
+          Pour ce faire, nous avons besoin de quelques bonnes âmes pour aider à organiser, de créer un groupe local sur le sujet, dont minimum 10 personnes seraient prêtes à venir regarder les retransmissions de 18h à ... 3h.
+          Outre la simple retransmission de la conférence, c'est aussi l'occasion de regrouper les passionnés autour de ce courant de pensée en organisant des évènements sur le sujet.
+        </p>
+        <h3>Ressources</h3>
+        <ul>
+          <li><a href="http://groups.google.fr/group/lean-startup-bordeaux">Liste de diffusion de l'antenne bordelaise</a></li>
+          <li><em>Lean Startup</em>, d'Eric Ries</li>
+          <li><a href="http://en.wikipedia.org/wiki/Lean_Startup">Article en anglais sur Wikipedia</a></li>
+        </ul>
       </section>
     </div>
 
-    <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Lean-startup-bordeaux maintained by <a href="https://github.com/okiwi">okiwi</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+        <p>Publié avec <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
-
-    
 
   </body>
 </html>
