--- a/index.html
+++ b/index.html
@@ -24,10 +24,8 @@
       <section id="main_content" class="inner">
         <h3>Accueil</h3>
         <p>Les 3 et 4 décembre aura lieu la <a href="http://www.leanstartupconf.com/venue">Lean Startup Conference</a> à San Francisco !</p>
-        <p>
-          Pour ce faire, nous avons besoin de quelques bonnes âmes pour aider à organiser, de créer un groupe local sur le sujet, dont minimum 10 personnes seraient prêtes à venir regarder les retransmissions de 18h à ... 3h.
-          Outre la simple retransmission de la conférence, c'est aussi l'occasion de regrouper les passionnés autour de ce courant de pensée en organisant des évènements sur le sujet.
-        </p>
+        <p>Pour ce faire, nous avons besoin de quelques bonnes âmes pour aider à organiser, de créer un groupe local sur le sujet, dont minimum 10 personnes seraient prêtes à venir regarder les retransmissions de 18h à ... 3h.</p>
+        <p></p>Outre la simple retransmission de la conférence, c'est aussi <strong>l'occasion de regrouper les passionnés autour de ce courant de pensée en organisant des évènements sur le sujet</strong>.</p>
         <h3>Ressources</h3>
         <ul>
           <li><a href="http://groups.google.fr/group/lean-startup-bordeaux">Liste de diffusion de l'antenne bordelaise</a></li>
